<resources>
    <string name="app_name">SIMON</string>
    <string name="action_settings">Settings</string>
    <string name="ppm">Ppm</string>
    <string name="todo">todo</string>
    <string name="posicion">posicion</string>
    <string name="temperatura">temperatura</string>
    <string name="Temperatura">Temperatura</string>
    <string name="Posicion">Posicion</string>
    <string name="add">add</string>
    <string name="search">search</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="configuracion">Configuracion</string>
    <string name="principal">Principal</string>
    <string name="enviar">Enviar</string>
    <string name="estadisticas">Estadisticas</string>
    <string name="title_activity_config">SIMON</string>
    <string name="title_activity_estad">SIMON</string>
    <string name="notificacion_de_sue_o">Notificacion de Sueño</string>
    <string name="nombre">Nombre:</string>
    <string name="sexo">Sexo:</string>
    <string name="valores_predefinidos">Valores Predefinidos</string>
    <string name="ritmo_cardiaco">Ritmo Cardiaco</string>
    <string name="temperatura2">Temperatura</string>
    <string name="title_activity_red">Red</string>
    <string name="temperatura_promedio">Temperatura Promedio:</string>
    <string name="tiempo_de_sue_o">Tiempo de Sueño:</string>
    <string name="numero_de_alarmas">Numero de Alarmas:</string>
    <string name="todo2">TODO</string>
    <string name="todo1">TODO</string>
    <string name="red_wi_fi">Red WI-FI:</string>
    <string name="online">Online</string>
    <string name="conectar">Conectar</string>
    <string name="conexion_directa_ingresa_a_la_red_wi_fi_generada_por_el_dispositivo_usuario_contrase_a_conexion_online_previamente_se_debe_de_estar_conectado_directamente_al_dispositivo_ingrese_los_datos_que_se_le_solicita_para_establecer_conexion_a_su_red">Conexion Directa: Ingresa a la red WI-FI Generada por el dispositivo (Usuario/Contraseña) Conexion Online: Previamente se debe de estar conectado directamente al dispositivo, ingrese los datos que se le solicita para establecer conexion a su Red</string>
    <string name="contrase_a">Contraseña</string>
    <string name="Nombre" />
    <string name="Fecha">DD/MM/AA</string>
    <string name="red">Red</string>
    <string name="restaurar">Restaurar</string>
    <string name="guardar">Guardar</string>
    <string name="guardar1">GUARDAR</string>
    <string name="restaurar1">RESTAURAR</string>
    <string name="red3">RED</string>
    <string name="notificacion_de_ruido">Notificacion de Ruido</string>
    <string name="temperatura1">Temperatura</string>
    <string name="ridmo_cardiaco">Ridmo Cardiaco</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento:</string>
    <string name="peso">Peso:</string>
    <string name="valores_personalizados">Valores Personalizados</string>
    <string name="posici_n">Posición</string>
    <string name="aceptar">Aceptar</string>
    <string name="id_simon">ID SIMON</string>
    <string-array name="genero">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>

</resources>
