<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.user.proyec.MainActivity"
    tools:showIn="@layout/activity_main">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/Temperatura"
        app:layout_constraintBottom_toBottomOf="@+id/campo_texto2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/posici_n"
        app:layout_constraintBottom_toBottomOf="@+id/campo_texto"

        app:layout_constraintStart_toStartOf="@+id/textView" />


    <EditText
        android:id="@+id/campo_texto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:inputType=""
        android:labelFor="@+id/campo_texto"
        app:layout_constraintBottom_toTopOf="@+id/campo_texto3"
        app:layout_constraintEnd_toEndOf="@+id/campo_texto2"
        app:layout_constraintStart_toStartOf="@+id/campo_texto2"
        android:focusable="false"/>

    <EditText
        android:id="@+id/campo_texto2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="64dp"
        android:inputType=""
        android:labelFor="@+id/campo_texto2"
        app:layout_constraintBottom_toTopOf="@+id/campo_texto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        android:focusable="false"
        />


    <EditText
        android:id="@+id/campo_texto4"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="64dp"
        android:inputType=""
        android:labelFor="@+id/campo_texto4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        android:focusable="false"/>


    <EditText
        android:id="@+id/campo_texto3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="64dp"
        android:inputType=""
        android:labelFor="@+id/campo_texto3"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/campo_texto"
        app:layout_constraintStart_toStartOf="@+id/campo_texto"
        android:focusable="false"/>


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/ppm"
        app:layout_constraintBottom_toBottomOf="@+id/campo_texto4"
        app:layout_constraintStart_toEndOf="@+id/campo_texto4"
        android:focusable="false"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:srcCompat="@mipmap/corazon" android:contentDescription="@string/todo1" />


</android.support.constraint.ConstraintLayout>
